Fix desktop spacing on people pages

--- a/stylus/main.css
+++ b/stylus/main.css
@@ -290,19 +290,19 @@ section:nth-child(even) .wt_section-message {
 .wt_two-column-face-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(40rem, 1fr));
-  margin: 0 10%;
+  margin: 5% 10% 10% 10%;
   grid-gap: 10%;
 }
 .wt_three-column-face-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
-  margin: 0 10%;
+  margin: 5% 10% 10% 10%;
   grid-gap: 10%;
 }
 .wt_names-list {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
-  margin: 0 10%;
+  margin: 5% 10% 10% 10%;
   grid-gap: 10%;
 }
 .wt_member {
